<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.cetsp.iat.CsiActivity"
    app:showAsAction="always"
    >
    <item android:title="@string/veiculo" android:icon="@android:drawable/ic_menu_more"
        app:showAsAction="always"
        ><menu>
        <item android:id="@+id/new_vehicle" android:title="@string/veiculo" android:icon="@drawable/carro" />
        <item android:id="@+id/new_bicycle" android:title="@string/bicicleta" android:icon="@drawable/bici" />
        <item android:id="@+id/new_walker" android:title="@string/pessoa" android:icon="@drawable/pessoa" />
        <item android:id="@+id/new_obstacle" android:title="@string/obstaculo" android:icon="@drawable/obstaculo" />
        <item android:id="@+id/new_impact" android:title="@string/impacto" android:icon="@drawable/explode" />
        <item android:id="@+id/new_zebra" android:title="@string/crosswalk" android:icon="@drawable/btn_faixa" />
        <item android:id="@+id/new_centerline" android:title="@string/centerline" android:icon="@drawable/centerline" />
        <item android:id="@+id/new_mark" android:title="@string/mark" android:icon="@drawable/freada" />
        <item android:id="@+id/new_path" android:title="@string/trajetoria" android:icon="@drawable/trajetoria" />
        <item android:id="@+id/move_map" android:title="@string/movemap" android:icon="@drawable/move_map" />
        <item android:id="@+id/move_car" android:title="@string/edit" android:icon="@drawable/move_car" />
        <item android:id="@+id/end" android:title="@string/exit" android:icon="@drawable/finish" />
        <item android:id="@+id/center_here" android:title="@string/center_map" android:icon="@drawable/center"/>
    </menu></item>

</menu>