<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fatores_contribuintes_layout"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:padding="8dp"
        android:text="@string/fatores_via"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/semaforo_com_defeito_x"
        android:text="@string/semaforo_com_defeito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/placa_encoberta_x"
        android:text="@string/placa_encoberta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/placa_mal_posicionada_x"
        android:text="@string/placa_mal_posicionada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/pintura_no_solo_apagada_x"
        android:text="@string/pintura_no_solo_apagada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/iluminacao_deficiente_x"
        android:text="@string/iluminacao_deficiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/curva_acentuada_x"
        android:text="@string/curva_acentuada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />

    <CheckBox
        android:id="@+id/pista_declive_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/pista_declive" />

    <CheckBox
        android:id="@+id/pista_molhada_x"
        android:text="@string/pista_molhada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/obra_na_pista_x"
        android:text="@string/obra_na_pista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/calcada_esb_x"
        android:text="@string/calcada_ou_pista_esburacada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:padding="8dp"
        android:text="@string/fatores_humanos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/alcool_x"
        android:text="@string/alcool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/excedia_velocidade_x"
        android:text="@string/excedia_velocidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/mudou_de_faixa_x"
        android:text="@string/mudou_de_faixa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/contramao_x"
        android:text="@string/transitava_contramao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/conv_proibida_x"
        android:text="@string/conv_proibida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/retorno_proibido_x"
        android:text="@string/retorno_proibido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/desrespeitou_vermelho_x"
        android:text="@string/desrespeitou_vermelho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/nao_parou_pref_x"
        android:text="@string/nao_parou_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/colado_veic_fr_x"
        android:text="@string/colado_veic_fr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/freiou_brusca_x"
        android:text="@string/freiou_brusca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/parou_proib_x"
        android:text="@string/parou_proib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/moto_nao_guard_dist_x"
        android:text="@string/moto_nao_guard_dist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/racha_x"
        android:text="@string/racha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/distract_int_x"
        android:text="@string/distract_int"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/distract_ext_x"
        android:text="@string/distract_ext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/sono_cansaco_x"
        android:text="@string/sono_cansaco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/impericia_imprudencia_x"
        android:text="@string/impericia_imprudencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/transitava_calc_x"
        android:text="@string/transitava_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:padding="8dp"
        android:text="@string/fatores_veiculares"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/pneu_furou_x"
        android:text="@string/pneu_furou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/pneu_careca_x"
        android:text="@string/pneu_careca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/problema_freio_x"
        android:text="@string/problema_freio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/farois_desregulados_x"
        android:text="@string/farois_desregulados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <include layout="@layout/outros"/>
</LinearLayout>