<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fatores_contribuintes_layout">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:padding="8dp"
        android:text="@string/fatores_via"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/semaforo_com_defeito_x"
        android:text="@string/semaforo_com_defeito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/placa_encoberta_x"
        android:text="@string/placa_encoberta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/placa_mal_posicionada_x"
        android:text="@string/placa_mal_posicionada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/calcada_esb_x"
        android:text="@string/calcada_ou_pista_esburacada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/faixa_inexist_x"
        android:text="@string/faixa_inexist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/calcada_inex_x"
        android:text="@string/calcada_inex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />

    <EditText
        android:tag="@string/outros_fatores_ambientais"
        android:hint="@string/outros"
        android:id="@+id/outros_ambientais_text"
        android:layout_width="match_parent" android:layout_height="match_parent"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:padding="8dp"
        android:text="@string/fatores_humanos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/alcool_x"
        android:text="@string/alcool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/desrespeitou_vermelho_x"
        android:text="@string/desrespeitou_vermelho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/distract_ext_x"
        android:text="@string/distract_ext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/sono_cansaco_x"
        android:text="@string/sono_cansaco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/impericia_imprudencia_x"
        android:text="@string/impericia_imprudencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/cruzou_fora_faixa_x"
        android:text="@string/cruzou_fora_faixa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <CheckBox
        android:id="@+id/andava_x"
        android:text="@string/andava"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        />
    <EditText
        android:tag="@string/outros_fatores_humanos"
        android:hint="@string/outros"
        android:id="@+id/outros_humanos_text"
        android:layout_width="match_parent" android:layout_height="match_parent"
        />
</LinearLayout>