<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:padding="8dp"
        android:text="@string/sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/sexo_r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/sexo_masc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masc" />
        <RadioButton
            android:id="@+id/sexo_femn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fem" />

        <RadioButton
            android:id="@+id/sexo_si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sem_informacao" />
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:padding="8dp"
        android:text="@string/idade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="number"
        android:padding="8dp"
        android:id="@+id/idade_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:padding="8dp"
        android:text="@string/ferimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/ferimento_r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/ferimento_nenhum"
            android:text="@string/nenhum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/ferimento_leve"
            android:text="@string/leve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/ferimento_grave"
            android:text="@string/grave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/ferimento_fatal"
            android:text="@string/fatal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/ferimento_si"
            android:text="@string/sem_informacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
</LinearLayout>