<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/comprimento"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="numberDecimal"
            android:id="@+id/comprimento_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
        <TextView
            android:text="@string/metro"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/largura"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="numberDecimal"
            android:id="@+id/largura_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
        <TextView
            android:text="@string/metro"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>